# dogs

./: .env  .gitignore  Dockerfile  docker-compose.yml  req.txt
app/: file_functions.py  main.py  predict.py  preprocessing.py  settings.py  statistic.py
cli_project/: Cargo.toml  Dockerfile
cli_project/src/: commands.rs  lib.rs
cli_project/src/commands/: dogs.rs  dogs_estimate.rs  dogs_predict.rs
data/encoders/: encoder_250.pkl  encoder_261.pkl  encoder_265.pkl  encoder_268.pkl  encoder_270.pkl  encoder_275.pkl  encoder_285.pkl  encoder_480.pkl  encoder_483.pkl
data/imputers/: imputer_250.pkl  imputer_260.pkl  imputer_261.pkl  imputer_290.pkl  imputer_305.pkl
data/json/: dist_classes.json
data/models/random_forest_class/: model_250.pkl  model_260.pkl  model_262.pkl  model_264.pkl
ml_project/: Dockerfile  requirements.txt  scrapy.cfg
ml_project/data/encoders/: encoder_238.pkl  encoder_260.pkl  encoder_262.pkl  encoder_264.pkl  encoder_277.pkl  encoder_280.pkl  encoder_375.pkl  encoder_380.pkl  encoder_480_04_06_2022_05_06_2022.pkl  encoder_480_OR.pkl
ml_project/data/imputers/: imputer_262.pkl  imputer_480_04_06_2022_05_06_2022.pkl
ml_project/data/json/: dist_classes.json
ml_project/src/: file_functions.py  logger.py  predict.py  preprocessing.py  server.py  settings.py
ml_project/src/scripts/: file_functions.py  predict.py  preprocessing.py  statistic.py
scrapy_project/: Dockerfile  requirements.txt  settings.py
scripts/: dogs.py
spiders/: dog_spider.py  race_spider.py
utils/: items.py  pipelines.py  scrapy.cfg
(+16 files in other folders)
